<resources>
    <string name="app_name">NaPlanner</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="generic_form_password">Contraseña</string>
    <string name="generic_form_mail">Correo electronico</string>
    <string name="log_ing_fragment_button_send">Enviar</string>
    <string name="log_in_fragment_form_don_t_have_an_account">No tiene cuenta?</string>
    <string name="log_in_fragment_form_sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generic_form_confirm_password">Confirmar Contraseña</string>
    <string name="generic_form_mail_edit_text">Mail</string>
    <string name="generic_form_user_text_view">Nombre de usuario</string>
    <string name="sign_up_fragment_form_already_have_an_account">Ya tienes cuenta?</string>
    <string name="sign_up_fragment_form_log_in">Login</string>
    <string name="generic_name_professor">Profesor</string>
    <string name="sign_up_choice_fragment_professor_hint_text_view">Si eres profesor de un alumno</string>
    <string name="generic_name_student">Alumno</string>
    <string name="sign_up_choice_fragment_student_hint_text_view">Si eres un alumno</string>
    <string name="task_form_task_name">Nombre de la tarea:</string>
    <string name="task_form_hint_task_name">Inserte un nombre para su tarea</string>
    <string name="task_form_type_of_task">Importancia de la tarea:</string>
    <string name="generic_legendary_task_type">Legendaria</string>
    <string name="generic_epic_task_type">Epicas</string>
    <string name="generic_normal_task_type">Normal</string>
    <string name="bottom_menu_own_tasks_text">Tareas Propias</string>
    <string name="bottom_menu_students_teacher_tasks_text">Tareas Profesor</string>
    <string name="bottom_menu_students_list_text">Lista de Estudiantes</string>
    <string name="bottom_menu_completed_tasks_text">Tareas Completadas</string>
    <string name="action_add_task">Añadir Tarea</string>
    <string name="action_profile">Perfil</string>
    <string name="generic_action_confirmar">Confirmar</string>
    <string name="generic_action_cancelar">Cancelar</string>
    <string name="profile_fragment_number_of_task_completed">Numero de tareas completadas:</string>
    <string name="profile_fragment_log_out">Cerrar Sesion</string>
    <string name="profile_fragment_back">Volver</string>
    <string name="profile_fragment_create_task_text">Crear Tarea</string>
    <string name="fragment_profile_reset_password">Cambiar Contraseña</string>
    <string name="log_in_forgot_password">Olvide mi contraseña</string>
</resources>