<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".features.signup.view.SignUpChoiceFragment">

    <ImageView
        android:id="@+id/log_in_fragment_app_icon_image_view"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/books_app_ico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sign_up_choice_fragment_professor_linear_layout"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/border_linear_layout"
        android:backgroundTint="@color/dark_blue"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_fragment_app_icon_image_view">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/sign_up_choice_fragment_professor_hint_text_view"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:focusable="false"
            android:id="@+id/sign_up_choice_fragment_professor_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:padding="20dp"
            android:text="@string/generic_name_professor"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_in_fragment_password_linear_layout"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@drawable/border_linear_layout"
        android:backgroundTint="@color/dark_green"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_choice_fragment_professor_linear_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/sign_up_choice_fragment_student_hint_text_view"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:focusable="false"
            android:id="@+id/sign_up_choice_fragment_student_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:backgroundTint="@color/light_green"
            android:text="@string/generic_name_student"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_in_fragment_link_to_sign_up_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_fragment_password_linear_layout">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/sign_up_fragment_form_already_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sign_up_choice_fragment_log_in_text_view"
            android:layout_width="66dp"
            android:layout_height="match_parent"
            android:text="@string/sign_up_fragment_form_log_in"
            android:textAlignment="center"
            android:textColor="@color/blue" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>