<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".features.main.CreateTaskFragment">

    <ImageView
        android:id="@+id/task_form_fragment_app_icon_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/boocks_app_ico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/task_form_fragment_username_linear_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/task_form_fragment_app_icon_image_view"
        app:layout_constraintTop_toTopOf="@id/task_form_fragment_app_icon_image_view"
        app:layout_constraintBottom_toBottomOf="@id/task_form_fragment_app_icon_image_view"
        tools:layout_editor_absoluteY="45dp">

        <TextView
            android:id="@+id/task_form_fragment_username_text_view"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:background="@drawable/border_linear_layout"
            android:backgroundTint="@color/light_blue"
            android:paddingHorizontal="4dp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            tools:text="User name" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/task_form_fragment_name_linear_layout"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_linear_layout"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_form_fragment_app_icon_image_view">

        <TextView
            android:id="@+id/task_form_fragment_name_textview"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:background="@color/dark_blue"
            android:text="@string/task_form_task_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/task_form_fragment_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:hint="@string/task_form_hint_task_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="30dp"
            android:padding="2dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_form_fragment_tasks_importance_linear_layout"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_linear_layout"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_form_fragment_name_linear_layout">

        <TextView
            android:id="@+id/task_form_fragment_taks_importance_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/dark_blue"
            android:padding="6dp"
            android:text="@string/task_form_type_of_task"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/task_form_fragment_taks_importance_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nav_menu_blue"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/task_form_radio_button_leg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/legendary_task_blue"
                android:text="@string/generic_legendary_task_type" />

            <RadioButton
                android:id="@+id/task_form_radio_button_epic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/epic_task_blue"
                android:text="@string/generic_epic_task_type" />

            <RadioButton
                android:id="@+id/task_form_radio_button_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/normal_tasks_blue"
                android:text="@string/generic_normal_task_type" />
        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/task_form_fragment_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/generic_action_confirmar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task_form_fragment_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/task_form_fragment_tasks_importance_linear_layout" />

    <Button
        android:id="@+id/task_form_fragment_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/generic_action_cancelar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/task_form_fragment_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_form_fragment_tasks_importance_linear_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>