<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".features.profile.ProfileFragment">

    <include
        android:id="@+id/user_level_name_fragment_layout"
        layout="@layout/fragment_user_level_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/profile_fragment_mail_linear_layout"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_linear_layout"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_level_name_fragment_layout">


        <TextView
            android:id="@+id/profile_fragment_mail_text_view"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:background="@color/dark_blue"
            android:paddingHorizontal="5dp"
            android:text="@string/log_in_fragment_form_user_or_mail_edit_text"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/profile_fragment_user_mail_text_view"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/light_blue"
            android:hint="@string/log_in_fragment_form_user_or_mail_edit_text"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_fragment_task_complete_linear_layout"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_linear_layout"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_fragment_mail_linear_layout">


        <TextView
            android:id="@+id/profile_fragment_complete_tasks_text_view"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:background="@color/dark_blue"
            android:paddingHorizontal="5dp"
            android:text="@string/profile_fragment_number_of_task_completed"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/profile_fragment_number_of_complete_tasks_text_view"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/light_blue"
            android:hint="@string/profile_fragment_number_of_task_completed"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

    </LinearLayout>

    <Button
        android:id="@+id/profile_fragment_log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/profile_fragment_log_out"
        android:textColor="@color/black"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_fragment_back_button"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_task_complete_linear_layout" />

    <Button
        android:id="@+id/profile_fragment_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/profile_fragment_back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile_fragment_log_out_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_fragment_task_complete_linear_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>